--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image Slider</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Image Slider</h1>
 
-    <div>Animation</div>
+    <section>
+        <h2>Animation</h2>
+    </section>
 
-    <div class="container">
-        <img src="1.jpg" alt="">
-        <img src="2.jpg" alt="">
-        <img src="3.jpg" alt="">
-        <img src="4.jpg" alt="">
-        <img src="https://static.wikia.nocookie.net/marvelcinematicuniverse/images/9/9d/Iron_Man_Infobox.jpg/revision/latest/scale-to-width-down/1200?cb=20240802142023" alt="">
-        
+    <div class="slider-container">
+        <img src="1.jpg" alt="First Image">
+        <img src="2.jpg" alt="Second Image">
+        <img src="3.jpg" alt="Third Image">
+        <img src="4.jpg" alt="Fourth Image">
+        <img src="https://static.wikia.nocookie.net/marvelcinematicuniverse/images/9/9d/Iron_Man_Infobox.jpg/revision/latest/scale-to-width-down/1200?cb=20240802142023" alt="Iron Man">
     </div>
 
-</body>
-<a href="https://www.zedge.net/ringtones-and-wallpapers">To download the Image CLICK HERE</a>
-<footer>
+    <a href="https://www.zedge.net/ringtones-and-wallpapers" target="_blank">To download the Image CLICK HERE</a>
 
-    <h1>It's easy brohh</h1>
-    
-</footer>
+    <footer>
+        <h2>It's easy brohh</h2>
+    </footer>
+</body>
 </html>
